created test methods for upload and download files from s3